node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port-service
  annotations:
    cloud.google.com/app-protocols: '{"one-https-port":"HTTPS"}'
spec:
  selector:
    app: one
  type: NodePort
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      name: 'one-https-port'
